[package]
name = "Calculator-NG"
version = "1.0.0"
edition = "2021"
authors = ["Galago-labs"]

[lib]
name = "calculator_lib"
crate-type = ["cdylib"]

[dependencies]
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
